Try to fix display issue on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,10 @@ body {
   background-color: #efede1; /* #FFFBF5; */
 }
 
+h1, h2, h3, h4, div, p, ul, li, a, figure, figcaption {
+  word-wrap: break-word;
+}
+
 .top-section {
   padding-top: 36px;
 }
